--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
             <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
             <div class="login-form">
                 <div class="sign-in-htm">
+                    <form action="connect.php" method="POST">
                     <div class="group">
                         <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input" required>
+                        <input id="user" type="text" class="input" name="userName" required /> 
                     </div>
                     <div class="group">
                         <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" data-type="password" required>
+                        <input id="pass" type="password" class="input" data-type="password" name="passWord" required>
                     </div>
                     <div class="group">
-                        <input id="check" type="checkbox" class="check" checked>
+                        <input id="check" type="checkbox" class="check" name="signMe" checked>
                         <label for="check"><span class="icon"></span> Keep me Signed in</label>
                     </div>
                     <div class="group">
@@ -59,11 +60,13 @@
                     <div class="foot-lnk">
                         <label for="tab-1">Already Member?</a>
                     </div>
+                </form>
                 </div>
+            
             </div>
         </div>
     </div>
-    </form>
+   
 
 
 
